<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/login_img_bg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/app_color"
            android:orientation="horizontal"
            app:layout_constraintHeight_percent="0.40"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <ImageView
            android:id="@+id/login_img"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="8dp"
            android:src="@drawable/login_image"
            app:layout_constraintBottom_toBottomOf="@id/guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="50dp"
            android:text="@string/login"
            android:textColor="@color/fontColor"
            android:textSize="48sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/login_enter_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="26dp"
            android:text="@string/enter_your_mobile_number"
            android:textColor="@color/fontColorLight"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_text"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/login_mobile_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="32dp"
            android:text="@string/mobile_number"
            android:textColor="@color/fontColorLight"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_enter_phone"
            tools:ignore="RtlHardcoded" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/login_input_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="8dp"
            app:strokeColor="@color/themeColor"
            app:strokeWidth="2dp"
            app:cardBackgroundColor="#F8F5FD"
            app:cardCornerRadius="7dp"
            app:cardElevation="4dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_mobile_number"
            tools:ignore="RtlHardcoded">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/_91"
                    android:textColor="@color/fontColorLight"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/edit_number"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="true"
                    android:background="@null"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:padding="4dp"
                    android:textColor="@color/fontColorLight"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:text="1234567890" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


        <TextView
            android:id="@+id/login_otp_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="16dp"
            android:text="@string/otp_msg"
            android:textColor="@color/fontColor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_input_card"
            tools:ignore="RtlHardcoded" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/get_otp_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:text="@string/get_otp"
            android:enabled="false"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="7dp"
            app:elevation="4dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_otp_message" />

        <ProgressBar
            android:id="@+id/send_otp_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/get_otp_button"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>