<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/dashboard_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_dashboard_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_search_img"
        android:queryHint="Search"
        app:layout_constraintTop_toTopOf="parent"/>


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/round_img_btn"
        android:src="@drawable/bell_icon"
        app:layout_constraintBottom_toBottomOf="@+id/welcome_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/welcome_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="224dp"
        android:text="@string/welcome"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="@id/search_view"
        app:layout_constraintStart_toStartOf="@id/search_view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="Abhishek Lodhi"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="@+id/search_view"
        app:layout_constraintStart_toStartOf="@+id/search_view"
        app:layout_constraintTop_toBottomOf="@+id/welcome_txt"/>

    <ImageButton
        android:id="@+id/problem_img_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:adjustViewBounds="true"
        android:background="@drawable/round_img_btn"
        android:src="@drawable/problem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/accomplished_img_btn"
        app:layout_constraintTop_toBottomOf="@+id/search_view"/>

    <TextView
        android:id="@+id/problem_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/problem"
        app:layout_constraintEnd_toEndOf="@id/problem_img_btn"
        app:layout_constraintStart_toStartOf="@id/problem_img_btn"
        app:layout_constraintTop_toBottomOf="@id/problem_img_btn"/>

    <ImageButton
        android:id="@+id/accomplished_img_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:adjustViewBounds="true"
        android:background="@drawable/round_img_btn"
        android:src="@drawable/accomplished"
        app:layout_constraintEnd_toStartOf="@+id/suggestion_img_btn"
        app:layout_constraintStart_toEndOf="@+id/problem_img_btn"
        app:layout_constraintTop_toBottomOf="@+id/search_view"/>

    <TextView
        android:id="@+id/accomplished_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/accomplished"
        app:layout_constraintEnd_toEndOf="@id/accomplished_img_btn"
        app:layout_constraintStart_toStartOf="@id/accomplished_img_btn"
        app:layout_constraintTop_toBottomOf="@id/accomplished_img_btn"/>


    <ImageButton
        android:id="@+id/suggestion_img_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:adjustViewBounds="true"
        android:background="@drawable/round_img_btn"
        android:src="@drawable/suggestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/accomplished_img_btn"
        app:layout_constraintTop_toBottomOf="@+id/search_view" />

    <TextView
        android:id="@+id/suggestion_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/suggestion"
        app:layout_constraintEnd_toEndOf="@id/suggestion_img_btn"
        app:layout_constraintStart_toStartOf="@id/suggestion_img_btn"
        app:layout_constraintTop_toBottomOf="@id/suggestion_img_btn"/>


   <TextView
       android:id="@+id/recent_problem_txt"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="16dp"
       android:layout_marginTop="474dp"
       android:text="@string/recent_problem"
       android:textSize="25sp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"/>
    
    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/recent_problem_txt">
    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>
</layout>