<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/rectangle_top"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/app_color"
            android:orientation="horizontal"
            app:layout_constraintHeight_percent="0.10"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Problem_top_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/problem"
            android:textSize="48sp"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@null"
            android:src="@drawable/back_btn"
            app:layout_constraintEnd_toStartOf="@+id/Problem_top_txt"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/you_can_post_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/you_can_post_your_problem_here"
            app:layout_constraintTop_toBottomOf="@id/rectangle_top" />

        <TextView
            android:id="@+id/describe_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:text="@string/describe"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/you_can_post_txt" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardBackgroundColor="#F8F5FD"
            app:cardCornerRadius="7dp"
            app:cardElevation="4dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/describe_txt"
            tools:ignore="RtlHardcoded">

            <EditText
                android:id="@+id/edit_txt_describe"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:autofillHints="false"
                android:background="@drawable/custom_input"
                android:gravity="fill_horizontal"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="@color/fontColor"
                android:textSize="18sp"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck"
                tools:text="This is the example text" />


        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/severity_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:text="Severity"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/description" />


        <com.google.android.material.slider.Slider
            android:id="@+id/severity_slider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:valueFrom="0"
            android:valueTo="10"
            android:stepSize="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/severity_text"
            app:layout_constraintBottom_toTopOf="@id/attachment_txt"
            />

        <TextView
            android:id="@+id/attachment_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/attachment"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/severity_slider" />

        <androidx.cardview.widget.CardView
            android:id="@+id/photo_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="7dp"
            app:layout_constraintEnd_toStartOf="@id/pdf_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/attachment_txt">

            <ImageButton
                android:id="@+id/photo_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:adjustViewBounds="true"
                android:src="@drawable/photo" />

        </androidx.cardview.widget.CardView>

<!--        <androidx.cardview.widget.CardView-->
<!--            android:id="@+id/video_card"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="20dp"-->
<!--            app:cardCornerRadius="7dp"-->
<!--            app:layout_constraintEnd_toStartOf="@id/pdf_card"-->
<!--            app:layout_constraintStart_toEndOf="@+id/photo_card"-->
<!--            app:layout_constraintTop_toBottomOf="@id/attachment_txt">-->

<!--            <ImageButton-->
<!--                android:id="@+id/video_img"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:adjustViewBounds="true"-->
<!--                android:src="@drawable/video" />-->

<!--        </androidx.cardview.widget.CardView>-->


        <androidx.cardview.widget.CardView
            android:id="@+id/pdf_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/photo_card"
            app:layout_constraintTop_toBottomOf="@id/attachment_txt">

            <ImageButton
                android:id="@+id/pdf_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:adjustViewBounds="true"
                android:src="@drawable/pdf" />

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/photo_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Photo"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/photo_card"
            app:layout_constraintStart_toStartOf="@id/photo_card"
            app:layout_constraintTop_toBottomOf="@id/photo_card" />

<!--        <TextView-->
<!--            android:id="@+id/video_txt"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/video"-->
<!--            app:layout_constraintEnd_toEndOf="@id/video_card"-->
<!--            app:layout_constraintStart_toStartOf="@id/video_card"-->
<!--            app:layout_constraintTop_toBottomOf="@id/video_card" />-->

        <TextView
            android:id="@+id/pdf_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pdf"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="@id/pdf_card"
            app:layout_constraintStart_toStartOf="@id/pdf_card"
            app:layout_constraintTop_toBottomOf="@id/pdf_card" />


        <androidx.cardview.widget.CardView
            android:id="@+id/uploaded_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="7dp"
            app:cardMaxElevation="7dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/attachment_txt">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/uploaded_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/pdf"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />
                <TextView
                    android:id="@+id/uploaded_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/uploaded_img"
                    tools:text="Uploaded.png"
                    />

                <ImageView
                    android:id="@+id/cancel_upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:src="@drawable/ic_baseline_cancel"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:padding="16dp"
            android:text="@string/submit"
            android:textSize="22sp"
            android:textStyle="bold"
            app:cornerRadius="7dp"
            android:enabled="false"
            app:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photo_card" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>